# ratatui-opencode-example

./: Cargo.toml  README.md  clippy.toml  justfile
src/: app.rs  commands.rs  main.rs  messages.rs  theme.rs
src/render/: blocks.rs  input.rs  mod.rs  modals.rs
src/render/widgets/: input_bottom_panel.rs  left_border_panel.rs  mod.rs  thumb_scrollbar.rs
