[package]
name = "ratatui-opencode-example"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code           = "deny"
unused_qualifications = "deny"

[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
pedantic    = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ratatui-opentui-loader = "0.1"
